# experiment-engineer

./: .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  main.py  pyproject.toml
docs/: ARCHITECTURE.md  WORKFLOWS.md
examples/: basic_usage.py  custom_agent.py  custom_workflow.py  using_agents.py
src/: __init__.py  __version__.py
src/agents/: __init__.py
src/agents/hypothesis/: __init__.py  hypothesis_analyzer.py  hypothesis_refiner.py  hypothesis_reviser.py
src/api/: __init__.py  app.py  schemas.py
src/api/routes/: agents.py  workflows.py
src/api/v1/: __init__.py
src/cli/: __init__.py  main.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  agent.py  exceptions.py  logging.py  metrics.py  registry.py
src/db/: __init__.py  models.py  session.py
src/db/repositories/: __init__.py
src/models/: __init__.py  agent.py  hypothesis.py  workflow.py
src/services/: __init__.py  agent_service.py  workflow_service.py
src/utils/: __init__.py  client.py
src/workflows/: __init__.py  hypothesis.py  pipeline.py  workflow.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_workflows.py
tests/unit/: __init__.py  test_agents.py  test_client.py
